서브 테스트

--- a/data/skin/front/moment/main/index.html
+++ b/data/skin/front/moment/main/index.html
@@ -4,7 +4,7 @@
 <div class="main_visual">
     {=includeWidget('proc/_slider_banner.html', 'bannerCode', '511517418')}
 </div>
-<div>11223213</div>
+<div>This is test </div>
 <!-- //main_visual -->
 <div class="main_content">
     <div class="main_slide_ban">
