--- a/data/skin/front/moment/main/index.html
+++ b/data/skin/front/moment/main/index.html
@@ -5,6 +5,8 @@
     {=includeWidget('proc/_slider_banner.html', 'bannerCode', '511517418')}
 </div>
 <div>11223213</div>
+
+<div>TEST TEST</div>
 <!-- //main_visual -->
 <div class="main_content">
     <div class="main_slide_ban">
